--- a/build.gradle
+++ b/build.gradle
@@ -148,13 +148,10 @@ repositories {
     // }
 
     // JEI
-    maven { url = "https://dvs1.progwml6.com/files/maven" }
-    
-    // ParchmentMC
-    maven { url = "https://maven.parchmentmc.org" }
+    maven { url "https://dvs1.progwml6.com/files/maven" }
 
     // Top
-    maven { url = "https://cursemaven.com" }
+    maven { url "https://cursemaven.com" }
 }
 
 dependencies {
@@ -186,11 +183,11 @@ jar {
     manifest {
         attributes([
                 "Specification-Title"     : "recraftory",
-                "Specification-Vendor"    : "recraftorysareus",
+                "Specification-Vendor"    : "recraftory",
                 "Specification-Version"   : "1", // We are version 1 of ourselves
                 "Implementation-Title"    : project.name,
                 "Implementation-Version"  : project.jar.archiveVersion,
-                "Implementation-Vendor"   : "recraftorysareus",
+                "Implementation-Vendor"   : "recraftory",
                 "Implementation-Timestamp": new Date().format("yyyy-MM-dd'T'HH:mm:ssZ")
         ])
     }
